--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -227,6 +227,10 @@ section {
 
   &:first-of-type {
     padding-top: 1rem;
+
+    .content-container {
+      margin-bottom: 1rem;
+    }
   }
 
   .content-container {
@@ -472,23 +476,31 @@ p {
   }
 
   .content-container {
+    background: #212121;
+    border-radius: 123px;
+    box-shadow: inset -7px 7px 12px #1b1b1b, inset 7px -7px 12px #272727;
     display: flex;
     flex-direction: column;
+    padding: 1.5rem;
   }
 
   .logo-container {
     align-items: center;
     display: flex;
+    gap: 1rem;
     justify-content: space-evenly;
 
     .connections-link {
-      height: min(4vh, 45px);
       opacity: 0.5;
       transform: scale(0.66);
+      width: min(19vw, 1000px);
 
       .connection-logo {
-        height: 100%;
-        width: 100%;
+        height: 72px;
+        margin-inline: auto;
+        object-fit: contain;
+        object-position: center;
+        width: 200px;
       }
     }
   }
@@ -923,6 +935,10 @@ p {
 
   section:first-of-type {
     padding-top: 3rem;
+
+    .content-container {
+      margin-bottom: var(--section-margin-bottom);
+    }
   }
 
   // > --------------------------------------------------------------------------------------------
@@ -951,9 +967,6 @@ p {
 
   #connections {
     .content-container {
-      background: #212121;
-      border-radius: 123px;
-      box-shadow: inset -7px 7px 12px #1b1b1b, inset 7px -7px 12px #272727;
       padding: 3rem;
 
       .logo-container {
@@ -1071,6 +1084,12 @@ p {
           // }
         }
       }
+    }
+  }
+
+  section:first-of-type {
+    .content-container {
+      margin-bottom: 0.75rem;
     }
   }
 
