--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -694,6 +694,7 @@ p {
       background: linear-gradient(145deg, #1e1e1e, #232323);
       border-radius: 33px;
       box-shadow: 10px 10px 21px #1a1a1a, -10px -10px 21px #282828;
+      display: none; // default
       flex-direction: column;
       justify-content: center;
       height: 600px;
@@ -1035,25 +1036,137 @@ p {
 
 // > --------------------------------------------------------------------------------------------
 
-#response-modal {
+#response-dialog {
   border: none;
-  &::backdrop {
-    background: rgba(33, 33, 33, 0.666);
+  background: linear-gradient(145deg, #1e1e1e, #232323);
+  border-radius: 33px;
+  box-shadow: 10px 10px 21px #1a1a1a, -10px -10px 21px #282828;
+  display: none; // default
+  flex-direction: column;
+  justify-content: center;
+  inset: 0;
+  opacity: 0;
+  padding: 2rem;
+  position: fixed;
+  transition: opacity 380ms ease-in-out;
+  width: min(85vw, 666px);
 
-
+  &[open] {
+    animation: animate-dialog-in 380ms ease-in-out forwards;
+    display: flex;
+    opacity: 1;
   }
 
-  #response-modal-content-container {
-    height: 300px;
-    width: 300px;
+  &.closing {
+    animation: animate-dialog-out 380ms ease-in-out forwards;
+  }
 
-    #response-modal-text {
+  &::backdrop {
+    background: rgb(33, 33, 33);
+    transition: opacity 380ms ease-in-out;
+  }
+
+  #response-dialog-content-container {
+    align-items: center;
+    // border: 2px solid red;
+    display: flex;
+    flex-direction: column;
+    font-family: 'Major Mono Display', monospace;
+    justify-content: space-between;
+
+    & > * {
+      // border: 3px solid rebeccapurple;
+    }
+
+    #response-dialog-close-button {
+      align-self: end;
+      color: var(--color-text-primary);
+      cursor: pointer;
+      font-size: 1.5rem;
+      line-height: 1;
+      margin-bottom: 3rem;
+      position: relative;
+      transition: all 123ms ease-in-out;
+
+      &:hover,
+      &:focus {
+        opacity: 1;
+        transform: scale(1.5);
+
+        &::before {
+          opacity: 1;
+        }
+      }
+
+      &:focus {
+        outline: none;
+      }
+
+      &:active {
+        transform: scale(1.25);
+      }
+
+      &::before {
+        content: '✕';
+        inset: 0;
+        opacity: 0;
+        position: absolute;
+        text-shadow: 0 0 6px var(--neon-blue);
+        z-index: -1;
+      }
+    }
+
+    #response-dialog-heading {
+      color: whitesmoke;
+      font-size: var(--h3-fs);
+      font-weight: 400;
+      margin-bottom: 3rem;
       opacity: 1;
-      visibility: visible ;
+      text-shadow: 0 0 30px black;
+      text-align: center;
+      text-transform: uppercase;
+      visibility: visible;
+    }
+
+    #response-dialog-paragraph {
+      background-color: whitesmoke;
+      border: 2px solid whitesmoke;
+      border-radius: 100vw;
+      box-shadow: 0px 6px black, inset 0 0 18px silver;
+      color: black;
+      font-weight: bold;
+      font-size: var(--body-fs);
+      opacity: 1;
+      padding: 1rem;
+      position: relative;
+      text-align: center;
+      z-index: 1;
+
+      &::before {
+        background: whitesmoke;
+        // border: 2px solid red;
+        aspect-ratio: 1 / 1;
+        content: '';
+        position: absolute;
+        bottom: -15px;
+        left: 50%;
+        transform: translateX(-50%) rotate(45deg);
+        margin-inline: auto;
+        width: 30px;
+        z-index: -1;
+      }
+    }
+
+    #response-dialog-image {
+      @include uninteractable;
+
+      cursor: pointer;
+      filter: drop-shadow(0 0 6px black);
+      height: auto;
+      object-fit: cover;
+      width: 15rem;
     }
   }
-  
-
 }
 
 // > --------------------------------------------------------------------------------------------
