--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -824,7 +824,8 @@ p {
           gap: 0.5rem;
           height: 100%;
 
-          label {
+          label,
+          #vision-character-requirement {
             color: var(--color-text-primary);
             font-size: var(--body-fs);
             text-transform: lowercase;
@@ -1117,7 +1118,7 @@ p {
     }
 
     #response-dialog-heading {
-      color: whitesmoke;
+      color: var(--color-text-primary);
       font-size: var(--h3-fs);
       font-weight: 400;
       margin-bottom: 3rem;
