align form select options to center

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -921,6 +921,10 @@ p {
               white-space: pre-wrap;
               word-wrap: break-word; /* Ensures long words do not break the layout */
 
+              option {
+                text-align: center;
+              }
+
               &::placeholder {
                 text-align: center;
               }
